worked on the tools and machines product data

--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -242,20 +242,11 @@
               </mdb-accordion-item-head>
               <mdb-accordion-item-body>
                 <ul>
-                  <li><a href="#" mdbWavesEffect>Air Pillow Machine</a></li>
-                  <li><a href="#" mdbWavesEffect>Box Stapler</a></li>
-                  <li><a href="#" mdbWavesEffect>Bubble Wrap Dispenser</a></li>
-                  <li><a href="#" mdbWavesEffect>Glue Gun</a></li>
-                  <li><a href="#" mdbWavesEffect>Poly Bag Sealer</a></li>
-                  <li><a href="#" mdbWavesEffect>Poly Strapping Machine</a></li>
-                  <li><a href="#" mdbWavesEffect>Poly Tubing Dispenser</a></li>
-                  <li><a href="#" mdbWavesEffect>Stretch Wrap Machine</a></li>
-                  <li><a href="#" mdbWavesEffect>Shrink Wrap System</a></li>
-                  <li><a href="#" mdbWavesEffect>Tape Dispenser</a></li>
-                  <li><a href="#" mdbWavesEffect>Utility Knife</a></li>
-                  <li>
-                    <a href="#" mdbWavesEffect>Wrapping Paper Dispenser</a>
-                  </li>
+                  <li routerLink="air-pillow-machine"><a mdbWavesEffect>Air Pillow Machine</a></li>
+                  <li routerLink="glue-gun"><a mdbWavesEffect>Glue Gun</a></li>
+                  <li routerLink="poly-tubing-dispenser"><a mdbWavesEffect>Poly Tubing Dispenser</a></li>
+                  <li routerLink="utility-knife"><a mdbWavesEffect>Utility Knife</a></li>
+                  <li routerLink="wrapping-paper-dispenser"><a mdbWavesEffect>Wrapping Paper Dispenser</a></li>
                 </ul>
               </mdb-accordion-item-body>
             </mdb-accordion-item>
