--- a/src/app/products/labels-envelopes/thermal-transfer/thermal-transfer.component.html
+++ b/src/app/products/labels-envelopes/thermal-transfer/thermal-transfer.component.html
@@ -56,7 +56,7 @@
         </div>
       </div>
 
-      <!--TABLES-->
+      <!-- TABLE -->
       <table class="table mb-5 table-striped table-hover">
         <thead>
           <tr
