finally finished adding all the product informationnnnngit add .git add .

--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -257,12 +257,11 @@
               </mdb-accordion-item-head>
               <mdb-accordion-item-body>
                 <ul>
-                  <li><a href="#" mdbWavesEffect>Cable Ties</a></li>
-                  <li><a href="#" mdbWavesEffect>Dock Board</a></li>
-                  <li><a href="#" mdbWavesEffect>Gloves & Masks</a></li>
-                  <li><a href="#" mdbWavesEffect>Metal Truck Seal</a></li>
-                  <li><a href="#" mdbWavesEffect>Shipping Scales</a></li>
-                  <li><a href="#" mdbWavesEffect>Twist Ties</a></li>
+                  <li routerLink="cable-ties"><a mdbWavesEffect>Cable Ties</a></li>
+                  <li routerLink="gloves-masks"><a mdbWavesEffect>Gloves & Masks</a></li>
+                  <li routerLink="metal-truck-seal"><a mdbWavesEffect>Metal Truck Seal</a></li>
+                  <li routerLink="shipping-scales"><a mdbWavesEffect>Shipping Scales</a></li>
+                  <li routerLink="twist-ties"><a mdbWavesEffect>Twist Ties</a></li>
                 </ul>
               </mdb-accordion-item-body>
             </mdb-accordion-item>
