--- a/src/app/products/cushioning/cushioning-foam/cushioning-foam.component.html
+++ b/src/app/products/cushioning/cushioning-foam/cushioning-foam.component.html
@@ -130,7 +130,7 @@
             <th scope="col">ADD TO CART</th>
           </tr>
         </thead>
-        <tr *ngFor="let foam of cusioningFoam" style="text-align: center;">
+        <tr *ngFor="let foam of cushioningFoam" style="text-align: center;">
           <td class="item align-middle">{{ foam.productRegular }}</td>
           <td class="item align-middle">{{ foam.productNumberAntiStatic }}</td>
           <td class="item align-middle">{{ foam.thickness }}</td>
