--- a/src/app/products/misc/metal-truck-seal/metal-truck-seal.component.html
+++ b/src/app/products/misc/metal-truck-seal/metal-truck-seal.component.html
@@ -1,3 +1,72 @@
-<p>
-  metal-truck-seal works!
-</p>
+<!--suppress ALL -->
+<main>
+  <div class="container">
+    <div class="row">
+      <div class="container mb-5 col-12 col-lg-6">
+        <div class="row justify-content-center">
+          <img
+            class="z-depth-1 rounded"
+            style="width: 405px; height: 405px;"
+            src="../../../../assets/img/truck-seal.jpg"
+            alt="Truck Seal"
+            data-toggle="modal"
+            data-target="#basicExample"
+            (click)="frame.show()"
+            mdbWavesEffect
+          />
+          <div
+            mdbModal
+            #frame="mdbModal"
+            class="modal fade"
+            id="frameModalTop"
+            role="dialog"
+            aria-labelledby="myModalLabel"
+            aria-hidden="true"
+          >
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <!-- Image -->
+                <div class="modal-body d-flex justify-content-center">
+                  <img
+                    src="../../../../assets/img/truck-seal.jpg"
+                    alt="Truck Seal"
+                  />
+                </div>
+                <!-- Button -->
+                <div class="modal-footer">
+                  <button
+                    type="button"
+                    mdbBtn
+                    color="primary"
+                    class="waves-light"
+                    mdbWavesEffect
+                    data-dismiss="modal"
+                    (click)="frame.hide()"
+                  >
+                    Close
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="card w-100 mb-5 col-12 col-lg-6">
+        <div class="card-body">
+          <h3 class="card-title">METAL TRUCK SEAL</h3>
+          <p class="card-text lead">
+            Self-locking, permanent, mechanical closure.
+          </p>
+          <p class="card-text lead">
+            Tamper resistant.
+          </p>
+          <p class="card-text lead">
+            Fits, even in narrow slots: Use for shipping containers, storage
+            bins, truck doors, & so many more.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</main>
