--- a/src/app/products/misc/cable-ties/cable-ties.component.html
+++ b/src/app/products/misc/cable-ties/cable-ties.component.html
@@ -1,3 +1,125 @@
-<p>
-  cable-ties works!
-</p>
+<!--suppress ALL -->
+<main>
+  <div class="container">
+    <div class="row">
+      <div class="container mb-5 col-12 col-lg-6">
+        <div class="row justify-content-center">
+          <img
+            class="z-depth-1 rounded"
+            style="width: 455px; height: 455px;"
+            src="../../../../assets/img/cable-ties.jpg"
+            alt="Cable Ties"
+            data-toggle="modal"
+            data-target="#basicExample"
+            (click)="frame.show()"
+            mdbWavesEffect
+          />
+          <div
+            mdbModal
+            #frame="mdbModal"
+            class="modal fade"
+            id="frameModalTop"
+            role="dialog"
+            aria-labelledby="myModalLabel"
+            aria-hidden="true"
+          >
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <!-- Image -->
+                <div class="modal-body d-flex justify-content-center">
+                  <img
+                    src="../../../../assets/img/cable-ties.jpg"
+                    alt="Cable Ties"
+                  />
+                </div>
+                <!-- Button -->
+                <div class="modal-footer">
+                  <button
+                    type="button"
+                    mdbBtn
+                    color="primary"
+                    class="waves-light"
+                    mdbWavesEffect
+                    data-dismiss="modal"
+                    (click)="frame.hide()"
+                  >
+                    Close
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="card w-100 mb-5 col-12 col-lg-6">
+        <div class="card-body">
+          <h3 class="card-title">CABLE TIES</h3>
+          <p class="card-text lead">
+            Secures your products quickly and permanently.
+          </p>
+          <p class="card-text lead">
+            <strong>Durable:</strong> Our cable ties are of high quality and
+            durability- breakage resistant.
+          </p>
+          <p class="card-text lead">
+            <strong>Locks Tightly:</strong> Once locked, the cable ties won’t release or loosen.
+
+          </p>
+          <p class="card-text lead">
+            <strong>Neutral Color:</strong> Our twist ties are all of a light, neutral color.
+            Tie cables, wires and other elongated items together.
+          </p>
+        </div>
+      </div>
+
+      <!-- TABLE -->
+      <table class="table mb-5 table-striped table-hover">
+        <thead>
+          <tr
+            style="text-align: center; background-color: #0c4b7d; color: white;"
+          >
+            <th scope="col">
+              PRODUCT #
+            </th>
+            <th scope="col">
+              LENGTH
+            </th>
+            <th scope="col">
+              TENSIL STRENGTH
+            </th>
+            <th scope="col">
+              NO./PACK
+            </th>
+            <th scope="col">
+              ADD TO CART
+            </th>
+          </tr>
+        </thead>
+        <tr
+          *ngFor="let cable of cableTies"
+          style="text-align: center;"
+        >
+          <td class="item align-middle">{{ cable.productNumber }}</td>
+          <td class="item align-middle">{{ cable.length }}</td>
+          <td class="item align-middle">{{ cable.tensileStrength }}</td>
+          <td class="item align-middle">{{ cable.numberPerPack }}</td>
+          <td class="item align-middle">
+            <!--          <td>-->
+            <!--            <button>submit</button>-->
+            <!--          </td>-->
+            <input
+              class="productInput"
+              type="number"
+              placeholder="qty"
+              name="quantity"
+              min="1"
+              max="10"
+            />
+            <button class="btn btn-primary" type="submit">ADD</button>
+          </td>
+        </tr>
+      </table>
+    </div>
+  </div>
+</main>
