--- a/src/app/products/tools-machines/utility-knife/utility-knife.component.html
+++ b/src/app/products/tools-machines/utility-knife/utility-knife.component.html
@@ -1,3 +1,126 @@
-<p>
-  utility-knife works!
-</p>
+<!--suppress ALL -->
+<main>
+  <div class="container">
+    <div class="row">
+      <div class="container mb-5 col-12 col-lg-6">
+        <mdb-carousel class="z-depth-1 rounded" [animation]="'slide'">
+          <mdb-carousel-item>
+            <img
+              class="d-block w-100"
+              src="../../../../assets/img/utility-knife.jpg"
+              alt="Utility Knife"
+            />
+          </mdb-carousel-item>
+          <mdb-carousel-item>
+            <img
+              class="d-block w-100"
+              src="../../../../assets/img/utility-knife2.jpg"
+              alt="Utility Blade Bundle"
+            />
+          </mdb-carousel-item>
+        </mdb-carousel>
+      </div>
+
+      <div class="card w-100 mb-5 col-12 col-lg-6">
+        <div class="card-body">
+          <h3 class="card-title">UTILITY KNIFE</h3>
+          <p class="card-text lead">
+            Our high quality knife creates swift, clean cuts a variety of uses.
+          </p>
+          <p class="card-text lead">
+            <strong>Economical:</strong> Low Price guaranteed.
+          </p>
+          <p class="card-text lead">
+            <strong>Reliable:</strong> Durable knives with razor-sharp edges.
+          </p>
+        </div>
+      </div>
+
+      <!-- TABLE 1 -->
+      <h3 class="lead">UTILITY KNIVES</h3>
+      <table class="table mb-5 table-striped table-hover">
+        <thead>
+        <tr
+          style="text-align: center; background-color: #0c4b7d; color: white;"
+        >
+          <th scope="col">
+            PRODUCT #
+          </th>
+          <th scope="col">
+            DESCRIPTION
+          </th>
+          <th mdbTooltip="Labels Per Sheet" placement="left" scope="col">
+            COLOR
+          </th>
+          <th scope="col">ADD TO CART</th>
+        </tr>
+        </thead>
+        <tr
+          *ngFor="let knife of utilityKnife"
+          style="text-align: center;"
+        >
+          <td class="item align-middle">{{ knife.productNumber }}</td>
+          <td class="item align-middle">{{ knife.description }}</td>
+          <td class="item align-middle">{{ knife.color }}</td>
+          <td class="item align-middle">
+            <!--          <td>-->
+            <!--            <button>submit</button>-->
+            <!--          </td>-->
+            <input
+              class="productInput"
+              type="number"
+              placeholder="qty"
+              name="quantity"
+              min="1"
+              max="10"
+            />
+            <button class="btn btn-primary" type="submit">ADD</button>
+          </td>
+        </tr>
+      </table>
+
+      <!-- TABLE 2 -->
+      <h3 class="lead">UTILITY BLADES</h3>
+      <table class="table mb-5 table-striped table-hover">
+        <thead>
+        <tr
+          style="text-align: center; background-color: #0c4b7d; color: white;"
+        >
+          <th scope="col">
+            PRODUCT #
+          </th>
+          <th style="padding-left:1px;" scope="col">
+            DESCRIPTION
+          </th>
+          <th scope="col">
+            NO./CASE
+          </th>
+          <th scope="col">ADD TO CART</th>
+        </tr>
+        </thead>
+        <tr
+          *ngFor="let blades of utilityBlades"
+          style="text-align: center;"
+        >
+          <td class="item align-middle">{{ blades.productNumber }}</td>
+          <td class="item align-middle">{{ blades.description }}</td>
+          <td class="item align-middle">{{ blades.numberPerCase }}</td>
+          <td class="item align-middle">
+            <!--          <td>-->
+            <!--            <button>submit</button>-->
+            <!--          </td>-->
+            <input
+              class="productInput"
+              type="number"
+              placeholder="qty"
+              name="quantity"
+              min="1"
+              max="10"
+            />
+            <button class="btn btn-primary" type="submit">ADD</button>
+          </td>
+        </tr>
+      </table>
+    </div>
+  </div>
+</main>
